--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="feature-box">
       <span style="color:#99b2c9;">여기에 주요 기능이 표시됩니다.</span>
     </div>
-    <button class="go-community-btn" onclick="location.href='/problems/solve.html'" style="margin-bottom: 12px;">
+    <button class="go-community-btn" onclick="location.href='/problems/list.html'" style="margin-bottom: 12px;">
       문제 풀러가기
     </button>
     <button class="go-community-btn" onclick="location.href='/community/community.html'">
