--- a/community/community.html
+++ b/community/community.html
@@ -164,9 +164,10 @@
       function renderNav() {
         nav.html(`
           <a href="/index.html">홈</a>
+          <a href="/problems/list.html">문제목록</a>
           <a href="/community/community.html">커뮤니티</a>
-          <a href="/problems/list.html">문제</a>
           <a href="/login/login.html" id="loginLink">로그인</a>
+          <a href="/login/signUp.html">회원가입</a>
           <a href="#" id="logoutBtn" style="display:none;">로그아웃</a>
         `);
 
