--- a/community/add_question.html
+++ b/community/add_question.html
@@ -119,7 +119,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="welcome"><a href="/index.html">← 홈</a></div>
+    <div class="welcome"><a href="/index.html">NetLab</a></div>
     <div id="nav-links"></div>
   </div>
   <div class="container">
