--- a/community/community.html
+++ b/community/community.html
@@ -133,7 +133,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="welcome"><a href="/index.html">← 홈</a></div>
+    <div class="welcome"><a href="/index.html">NetLab</a></div>
     <div style="display:flex;align-items:center;gap:18px;">
       <div id="nav-links"></div>
       <div class="user-info" id="user-info"></div>
