--- a/community/community.html
+++ b/community/community.html
@@ -20,7 +20,18 @@
       display: flex; align-items: center; justify-content: space-between;
       z-index: 1000; box-shadow: 0 4px 16px rgba(61,174,250,0.06);
     }
-    .navbar .welcome a { color: #fff; font-size: 18px; font-weight: 600; text-decoration: none; }
+
+    .navbar .brand {
+      font-size: 22px; font-weight: 700; color: #fff; letter-spacing: 0.5px; text-shadow: 0 1px 2px #36a6ee44;
+      text-decoration: none;
+      transition: opacity 0.2s;
+    }
+    .navbar .brand:hover { opacity: 0.85; }
+    .navbar .right-group {
+      display: flex;
+      align-items: center;
+    }
+    .navbar .brand { font-size: 18px; }
     .navbar #nav-links a { color: #fff; text-decoration: none; margin-left: 26px; font-size: 16px; font-weight: 500; padding: 8px 14px; border-radius: 7px; background: transparent; transition: background 0.16s; }
     .navbar #nav-links a:hover { background: #379fde; }
     .navbar .user-info { color: #fff; font-weight: 600; margin-left: 18px; display: none; }
