--- a/community/community.html
+++ b/community/community.html
@@ -20,18 +20,7 @@
       display: flex; align-items: center; justify-content: space-between;
       z-index: 1000; box-shadow: 0 4px 16px rgba(61,174,250,0.06);
     }
-
-    .navbar .brand {
-      font-size: 22px; font-weight: 700; color: #fff; letter-spacing: 0.5px; text-shadow: 0 1px 2px #36a6ee44;
-      text-decoration: none;
-      transition: opacity 0.2s;
-    }
-    .navbar .brand:hover { opacity: 0.85; }
-    .navbar .right-group {
-      display: flex;
-      align-items: center;
-    }
-    .navbar .brand { font-size: 18px; }
+    .navbar .welcome a { color: #fff; font-size: 18px; font-weight: 600; text-decoration: none; }
     .navbar #nav-links a { color: #fff; text-decoration: none; margin-left: 26px; font-size: 16px; font-weight: 500; padding: 8px 14px; border-radius: 7px; background: transparent; transition: background 0.16s; }
     .navbar #nav-links a:hover { background: #379fde; }
     .navbar .user-info { color: #fff; font-weight: 600; margin-left: 18px; display: none; }
@@ -144,7 +133,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="brand"><a href="/index.html">NetLab</a></div>
+    <div class="welcome"><a href="/index.html">← 홈</a></div>
     <div style="display:flex;align-items:center;gap:18px;">
       <div id="nav-links"></div>
       <div class="user-info" id="user-info"></div>
