--- a/community/add_question.html
+++ b/community/add_question.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <title>질문 게시글 등록</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Pretendard', sans-serif;
       margin: 0;
       background: #f8fafb;
     }
+
     .navbar {
       position: fixed;
       top: 0;
@@ -26,21 +32,20 @@
       z-index: 1000;
       box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
     }
+
+    .navbar .welcome:hover {
+      opacity: 0.85;
+    }
+
     .navbar .welcome a {
       color: #fff;
-      font-size: 18px;
-      font-weight: 600;
+      font-size: 22px;
+      font-weight: 700;
       text-decoration: none;
-      letter-spacing: 0.2px;
-      display: flex;
-      align-items: center;
-      transition: opacity 0.2s;
-      gap: 4px;
+      letter-spacing: 0.5px;
+      text-shadow: 0 1px 2px #36a6ee44;
     }
-    .navbar .welcome a:hover {
-      opacity: 0.85;
-      text-decoration: underline;
-    }
+
     .navbar #nav-links a {
       color: #fff;
       text-decoration: none;
@@ -52,9 +57,11 @@
       background: transparent;
       transition: background 0.16s;
     }
+
     .navbar #nav-links a:hover {
       background: #379fde;
     }
+
     .container {
       max-width: 600px;
       background: #fff;
@@ -64,13 +71,16 @@
       margin: 110px auto 0 auto;
       text-align: center;
     }
+
     h1 {
       margin-bottom: 32px;
       font-size: 25px;
       color: #3DAEFA;
       font-weight: 700;
     }
-    input, textarea {
+
+    input,
+    textarea {
       width: 100%;
       padding: 13px;
       margin-bottom: 22px;
@@ -84,14 +94,18 @@
       color: #222;
       box-sizing: border-box;
     }
-    input:focus, textarea:focus {
+
+    input:focus,
+    textarea:focus {
       border: 1.5px solid #3DAEFA;
       background: #f4faff;
     }
+
     textarea {
       height: 140px;
       resize: vertical;
     }
+
     button {
       padding: 13px 38px;
       background: #3DAEFA;
@@ -105,21 +119,42 @@
       box-shadow: 0 2px 8px #3daefa18;
       margin-top: 2px;
     }
+
     button:hover {
       background: #3499d6;
     }
+
     @media (max-width: 700px) {
-      .navbar { padding: 0 12px; height: 54px;}
-      .navbar .welcome a { font-size: 15px;}
-      .container { padding: 20px 4vw 16px 4vw; margin-top: 80px;}
-      input, textarea { font-size: 14px; }
-      button { font-size: 15px; padding: 10px 18px;}
+      .navbar {
+        padding: 0 12px;
+        height: 54px;
+      }
+
+      .navbar .welcome a {
+        font-size: 15px;
+      }
+
+      .container {
+        padding: 20px 4vw 16px 4vw;
+        margin-top: 80px;
+      }
+
+      input,
+      textarea {
+        font-size: 14px;
+      }
+
+      button {
+        font-size: 15px;
+        padding: 10px 18px;
+      }
     }
   </style>
 </head>
+
 <body>
   <div class="navbar">
-    <div class="brand"><a href="/index.html">NetLab</a></div>
+    <div class="welcome"><a href="/index.html">← 홈</a></div>
     <div id="nav-links"></div>
   </div>
   <div class="container">
@@ -146,13 +181,13 @@
       });
 
       // 엔터로 등록(제목 input에서)
-      $('#title').keypress(function(e){
-        if(e.which === 13){
+      $('#title').keypress(function (e) {
+        if (e.which === 13) {
           $('#submitBtn').click();
         }
       });
       // textarea에서 엔터+shift만 줄바꿈, 엔터 단독은 등록
-      $('#content').keydown(function(e) {
+      $('#content').keydown(function (e) {
         if (e.key === 'Enter' && !e.shiftKey) {
           e.preventDefault();
           $('#submitBtn').click();
@@ -162,7 +197,7 @@
       // --- 질문 등록 (refresh 로직 포함) ---
       function registerQuestion(title, content, accessToken, retry) {
         $.ajax({
-          url: 'https://be.netlab.kr/api/questions',
+          url: 'http://be.netlab.kr/api/questions',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ title, content }),
@@ -175,7 +210,7 @@
             if (xhr.status === 401 && refreshToken && !retry) {
               // 401(토큰 만료)면 refresh로 토큰 갱신
               $.ajax({
-                url: 'https://be.netlab.kr/api/auth/refresh',
+                url: 'http://be.netlab.kr/api/auth/refresh',
                 method: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify({ refreshToken }),
@@ -211,4 +246,5 @@
     });
   </script>
 </body>
+
 </html>
