--- a/problems/list.html
+++ b/problems/list.html
@@ -37,7 +37,7 @@
     .navbar .brand:hover {
       opacity: 0.85;
     }
-    .navbar #nav-links a {
+    #nav-links a {
       color: #fff;
       text-decoration: none;
       margin-left: 24px;
@@ -48,8 +48,19 @@
       transition: background 0.16s;
       background: transparent;
     }
-    .navbar #nav-links a:hover {
+    #nav-links a:hover {
       background: #379fde;
+    }
+    .user-info {
+      color: #fff;
+      font-weight: 600;
+      margin-left: 18px;
+      font-size: 16px;
+      letter-spacing: 0.5px;
+      padding: 8px 0;
+      transition: opacity 0.15s;
+      opacity: 0.95;
+      display: none;
     }
     .container {
       max-width: 820px;
@@ -102,7 +113,7 @@
     @media (max-width: 700px) {
       .navbar { padding: 0 12px; height: 54px; }
       .navbar .brand { font-size: 18px; }
-      .navbar #nav-links a { margin-left: 10px; font-size: 14px; padding: 6px 8px; }
+      #nav-links a { margin-left: 10px; font-size: 14px; padding: 6px 8px; }
       .container { padding: 18px 6vw; margin-top: 80px; }
       #problemList li { padding: 13px 6vw; font-size: 14px; }
     }
@@ -111,11 +122,9 @@
 <body>
   <div class="navbar">
     <a href="/index.html" class="brand">NetLab</a>
-    <div id="nav-links">
-      <a href="/problems/list.html">문제목록</a>
-      <a href="/community/community.html">커뮤니티</a>
-      <a href="/login/login.html">로그인</a>
-      <a href="/login/signUp.html">회원가입</a>
+    <div style="display: flex; align-items: center;">
+      <div id="nav-links"></div>
+      <div class="user-info" id="user-info"></div>
     </div>
   </div>
 
@@ -126,6 +135,72 @@
 
   <script>
     $(document).ready(function() {
+      const nav = $('#nav-links');
+      const userInfo = $('#user-info');
+      const token = localStorage.getItem('token');
+      const refreshToken = localStorage.getItem('refreshToken');
+      const name = localStorage.getItem('name');
+
+      function renderNav() {
+        let html = `
+          <a href="/problems/list.html">문제목록</a>
+          <a href="/community/community.html">커뮤니티</a>
+        `;
+        if(token) {
+          html += `<a href="#" id="logoutBtn">로그아웃</a>`;
+          userInfo.text(name || '');
+          userInfo.show();
+        } else {
+          html += `
+            <a href="/login/login.html">로그인</a>
+            <a href="/login/signUp.html">회원가입</a>
+          `;
+          userInfo.hide();
+        }
+        nav.html(html);
+      }
+
+      function refreshAndRetry(requestFn) {
+        if (!refreshToken) {
+          alert('로그인 정보 만료, 다시 로그인하세요!');
+          localStorage.clear();
+          window.location.href = "/login/login.html";
+          return;
+        }
+        $.ajax({
+          url: 'https://be.netlab.kr/api/auth/refresh',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ refreshToken }),
+          success: function (res) {
+            localStorage.setItem('token', res.accessToken);
+            localStorage.setItem('refreshToken', res.refreshToken);
+            localStorage.setItem('name', res.name || '');
+            renderNav();
+          },
+          error: function () {
+            alert('로그인 정보 만료, 다시 로그인하세요!');
+            localStorage.clear();
+            window.location.href = "/login/login.html";
+          }
+        });
+      }
+
+      if(token) {
+        renderNav();
+      } else if(refreshToken) {
+        refreshAndRetry(() => renderNav());
+      } else {
+        renderNav();
+      }
+
+      $(document).on('click', '#logoutBtn', function() {
+        localStorage.clear();
+        alert('로그아웃 되었습니다');
+        location.reload();
+      });
+
+      // 문제 목록 불러오기
       $.ajax({
         url: 'https://be.netlab.kr/api/submit/problems', // 유저용 문제 조회 API 주소
         method: 'GET',
