--- a/community/add_question.html
+++ b/community/add_question.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>질문 게시글 등록</title>
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
       font-family: 'Pretendard', sans-serif;
       margin: 0;
       background: #f8fafb;
     }
-
     .navbar {
       position: fixed;
       top: 0;
@@ -32,20 +26,17 @@
       z-index: 1000;
       box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
     }
-
     .navbar .welcome:hover {
       opacity: 0.85;
     }
-
-    .navbar .welcome a {
+    .navbar .welcome a { 
       color: #fff;
       font-size: 22px;
       font-weight: 700;
       text-decoration: none;
-      letter-spacing: 0.5px;
+      letter-spacing: 0.5px; 
       text-shadow: 0 1px 2px #36a6ee44;
     }
-
     .navbar #nav-links a {
       color: #fff;
       text-decoration: none;
@@ -57,11 +48,9 @@
       background: transparent;
       transition: background 0.16s;
     }
-
     .navbar #nav-links a:hover {
       background: #379fde;
     }
-
     .container {
       max-width: 600px;
       background: #fff;
@@ -71,16 +60,13 @@
       margin: 110px auto 0 auto;
       text-align: center;
     }
-
     h1 {
       margin-bottom: 32px;
       font-size: 25px;
       color: #3DAEFA;
       font-weight: 700;
     }
-
-    input,
-    textarea {
+    input, textarea {
       width: 100%;
       padding: 13px;
       margin-bottom: 22px;
@@ -94,18 +80,14 @@
       color: #222;
       box-sizing: border-box;
     }
-
-    input:focus,
-    textarea:focus {
+    input:focus, textarea:focus {
       border: 1.5px solid #3DAEFA;
       background: #f4faff;
     }
-
     textarea {
       height: 140px;
       resize: vertical;
     }
-
     button {
       padding: 13px 38px;
       background: #3DAEFA;
@@ -119,39 +101,18 @@
       box-shadow: 0 2px 8px #3daefa18;
       margin-top: 2px;
     }
-
     button:hover {
       background: #3499d6;
     }
-
     @media (max-width: 700px) {
-      .navbar {
-        padding: 0 12px;
-        height: 54px;
-      }
-
-      .navbar .welcome a {
-        font-size: 15px;
-      }
-
-      .container {
-        padding: 20px 4vw 16px 4vw;
-        margin-top: 80px;
-      }
-
-      input,
-      textarea {
-        font-size: 14px;
-      }
-
-      button {
-        font-size: 15px;
-        padding: 10px 18px;
-      }
+      .navbar { padding: 0 12px; height: 54px;}
+      .navbar .welcome a { font-size: 15px;}
+      .container { padding: 20px 4vw 16px 4vw; margin-top: 80px;}
+      input, textarea { font-size: 14px; }
+      button { font-size: 15px; padding: 10px 18px;}
     }
   </style>
 </head>
-
 <body>
   <div class="navbar">
     <div class="welcome"><a href="/index.html">NetLab</a></div>
@@ -168,26 +129,48 @@
       const token = localStorage.getItem('token');
       const refreshToken = localStorage.getItem('refreshToken');
       const nav = $('#nav-links');
-      if (token) {
-        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
-      } else {
-        nav.html('<a href="/index.html">홈</a><a href="/login/login.html">로그인</a>');
+      const name = localStorage.getItem('name');
+
+      // 네비바 렌더링 함수 (로그인 상태에 따라 메뉴 변경)
+      function renderNav(loggedIn) {
+        if (loggedIn) {
+          nav.html(`
+            <a href="/index.html">홈</a>
+            <a href="/problems/list.html">문제목록</a>
+            <a href="/community/community.html">커뮤니티</a>
+            <a href="#" id="logoutBtn">로그아웃</a>
+          `);
+        } else {
+          nav.html(`
+            <a href="/index.html">홈</a>
+            <a href="/problems/list.html">문제목록</a>
+            <a href="/community/community.html">커뮤니티</a>
+            <a href="/login/login.html">로그인</a>
+            <a href="/login/signUp.html">회원가입</a>
+          `);
+        }
       }
+
+      // 초기 네비바 렌더링
+      renderNav(!!token);
+
+      // 로그아웃 이벤트 핸들러
       $(document).on('click', '#logoutBtn', function () {
         localStorage.removeItem('token');
         localStorage.removeItem('refreshToken');
+        localStorage.removeItem('name');
         alert('로그아웃 되었습니다');
         location.href = '/index.html';
       });
 
       // 엔터로 등록(제목 input에서)
-      $('#title').keypress(function (e) {
-        if (e.which === 13) {
+      $('#title').keypress(function(e){
+        if(e.which === 13){
           $('#submitBtn').click();
         }
       });
       // textarea에서 엔터+shift만 줄바꿈, 엔터 단독은 등록
-      $('#content').keydown(function (e) {
+      $('#content').keydown(function(e) {
         if (e.key === 'Enter' && !e.shiftKey) {
           e.preventDefault();
           $('#submitBtn').click();
@@ -197,7 +180,7 @@
       // --- 질문 등록 (refresh 로직 포함) ---
       function registerQuestion(title, content, accessToken, retry) {
         $.ajax({
-          url: 'http://be.netlab.kr/api/questions',
+          url: 'https://be.netlab.kr/api/questions',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ title, content }),
@@ -210,14 +193,13 @@
             if (xhr.status === 401 && refreshToken && !retry) {
               // 401(토큰 만료)면 refresh로 토큰 갱신
               $.ajax({
-                url: 'http://be.netlab.kr/api/auth/refresh',
+                url: 'https://be.netlab.kr/api/auth/refresh',
                 method: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify({ refreshToken }),
                 success: function (res) {
                   localStorage.setItem('token', res.accessToken);
                   localStorage.setItem('refreshToken', res.refreshToken);
-                  // 재귀적으로 등록 재시도 (retry 플래그 true로)
                   registerQuestion(title, content, res.accessToken, true);
                 },
                 error: function () {
@@ -241,10 +223,9 @@
           alert('제목과 내용을 모두 입력해주세요.');
           return;
         }
-        registerQuestion(title, content, token, false); // 최초 등록 시도
+        registerQuestion(title, content, token, false);
       });
     });
   </script>
 </body>
-
 </html>
