--- a/community/community.html
+++ b/community/community.html
@@ -241,17 +241,26 @@
           success: function (res) {
             const list = $('#questionList');
             list.empty();
+
             if (res.length === 0) {
               list.append('<li style="text-align:center;color:#aaa;">등록된 질문이 없습니다.</li>');
             } else {
               res.reverse().forEach(q => {
-                console.log(q);
                 const isNotice = q.notice === true;
                 const titlePrefix = isNotice ? '[공지] ' : '';
                 const titleColor = isNotice ? '#FF3337' : '#2563eb';
 
+                // 수정, 삭제 버튼
+                let buttons = '';
+                if (token && (isAdmin || q.author === name)) {
+                  buttons = `
+                    <button class="edit-btn" data-id="${q.id}">수정</button>
+                    <button class="delete-btn" data-id="${q.id}">삭제</button>
+                  `;
+                }
+
                 const item = $(`
-                  <li data-id="${q.id}">res.reverse().forEach(q => {
+                  <li data-id="${q.id}">
                     <div class="question-title" style="color:${titleColor};">${titlePrefix}${q.title}</div>
                     <div class="question-meta">
                       작성자: ${q.author} | 작성일: ${q.createdAt ? q.createdAt.replace('T', ' ').slice(0,19) : ''}
@@ -268,6 +277,7 @@
           }
         });
       }
+
 
       // 초기화: 관리자 체크 후 렌더링
       if (token) {
