--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>NetLab</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="assets/css/index.css"></script>
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
   <div class="navbar">
