--- a/problems/list.html
+++ b/problems/list.html
@@ -5,7 +5,7 @@
   <title>문제 목록 - NetLab</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="./assets/css/index.css">
+  <link rel="stylesheet" href="./assets/css/list.css">
 
 </head>
 <body>
