--- a/admin/index.html
+++ b/admin/index.html
@@ -5,114 +5,8 @@
   <title>관리자 메뉴 - NetLab</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    * { box-sizing: border-box; }
+  <link rel="stylesheet" href="./admin_assets/css/index.css">
 
-    body {
-      font-family: 'Pretendard', sans-serif;
-      background: #f8fafb;
-      margin: 0;
-      color: #23272f;
-    }
-
-    .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: #3DAEFA;
-      padding: 0 36px;
-      height: 64px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      z-index: 1000;
-      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
-    }
-    .navbar .welcome {
-      font-size: 21px;
-      font-weight: 700;
-      color: #fff;
-      letter-spacing: 0.2px;
-      text-shadow: 0 1px 2px #36a6ee44;
-    }
-    .navbar #nav-links a {
-      color: #fff;
-      text-decoration: none;
-      margin-left: 26px;
-      font-size: 16px;
-      font-weight: 500;
-      padding: 8px 14px;
-      border-radius: 7px;
-      background: transparent;
-      transition: background 0.16s;
-    }
-    .navbar #nav-links a:hover {
-      background: #379fde;
-    }
-
-    .container {
-      background: #fff;
-      padding: 46px 40px 36px 40px;
-      border-radius: 16px;
-      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.09);
-      text-align: center;
-      max-width: 540px;
-      margin: 110px auto 0 auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
-      margin-bottom: 32px;
-      font-size: 25px;
-      color: #3DAEFA;
-      font-weight: 700;
-    }
-
-    .menu {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-    }
-
-    .menu li {
-      margin: 22px 0;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .menu a {
-      display: inline-block;
-      width: 220px;
-      padding: 15px 0;
-      background: #f6fafd;
-      color: #222;
-      border-radius: 8px;
-      font-size: 17px;
-      font-weight: 600;
-      border: 1.5px solid #3DAEFA;
-      transition: background 0.16s, color 0.18s, border 0.18s;
-      box-shadow: 0 2px 8px #3daefa0b;
-      text-decoration: none;
-      letter-spacing: 0.2px;
-    }
-    .menu a:hover {
-      background: #3DAEFA;
-      color: #fff;
-      border-color: #3397e2;
-    }
-
-    @media (max-width: 700px) {
-      .navbar { padding: 0 12px; height: 54px;}
-      .navbar .welcome { font-size: 17px;}
-      .container { padding: 24px 7vw 24px 7vw; min-width: 0; max-width: 97vw; }
-      .menu a { width: 95vw; min-width: 0; font-size: 15px;}
-    }
-  </style>
 </head>
 <body>
 
