--- a/community/community.html
+++ b/community/community.html
@@ -5,6 +5,8 @@
   <title>커뮤니티 - 질문 목록</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" href="../assets/css/community.css">
+
   <style>
     /* 스타일은 그대로 유지하세요 */
     * { box-sizing: border-box; }
