--- a/admin/view_problems/view_problems.html
+++ b/admin/view_problems/view_problems.html
@@ -5,112 +5,8 @@
   <title>문제 목록</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    * { box-sizing: border-box; }
-    body {
-      font-family: 'Pretendard', sans-serif;
-      margin: 0;
-      background: #f8fafb;
-    }
-    .navbar {
-      position: fixed;
-      top: 0; left: 0; width: 100%;
-      background: #3DAEFA;
-      padding: 0 36px;
-      height: 64px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      z-index: 1000;
-      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
-    }
-    .navbar .welcome a {
-      color: #fff;
-      font-size: 18px;
-      font-weight: 600;
-      text-decoration: none;
-      letter-spacing: 0.2px;
-      display: flex;
-      align-items: center;
-      transition: opacity 0.2s;
-      gap: 4px;
-    }
-    .navbar .welcome a:hover {
-      opacity: 0.85;
-      text-decoration: underline;
-    }
-    .navbar #nav-links a {
-      color: #fff;
-      text-decoration: none;
-      margin-left: 26px;
-      font-size: 16px;
-      font-weight: 500;
-      padding: 8px 14px;
-      border-radius: 7px;
-      background: transparent;
-      transition: background 0.16s;
-    }
-    .navbar #nav-links a:hover {
-      background: #379fde;
-    }
-    .container {
-      max-width: 820px;
-      margin: 110px auto 0 auto;
-      padding: 38px 30px 34px 30px;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.08);
-    }
-    h1 {
-      font-size: 25px;
-      margin-bottom: 32px;
-      color: #3DAEFA;
-      font-weight: 700;
-      text-align: center;
-    }
-    #problemList {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    #problemList li {
-      background: #f6fafd;
-      margin-bottom: 18px;
-      padding: 20px 18px 20px 18px;
-      border-radius: 12px;
-      font-size: 16px;
-      box-shadow: 0 2px 8px #3daefa0b;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-      border: 1.5px solid #d2e5f9;
-      position: relative;
-    }
-    #problemList li strong { color: #23272f; }
-    .delete-btn {
-      background: #FF3337;
-      color: #fff;
-      border: none;
-      border-radius: 7px;
-      padding: 8px 22px;
-      font-size: 15px;
-      font-weight: 600;
-      cursor: pointer;
-      position: absolute;
-      top: 24px;
-      right: 24px;
-      box-shadow: 0 2px 8px #ff33371b;
-      transition: background 0.16s;
-    }
-    .delete-btn:hover { background: #d1001d; }
-    @media (max-width: 700px) {
-      .navbar { padding: 0 12px; height: 54px;}
-      .navbar .welcome a { font-size: 15px;}
-      .container { padding: 18px 6vw; margin-top: 80px;}
-      #problemList li { padding: 13px 6vw 13px 6vw; font-size: 14px;}
-      .delete-btn { top: 12px; right: 12px; font-size: 13px; padding: 6px 14px;}
-    }
-  </style>
+  <link rel="stylesheet" href="./admin_assets/css/view_problems.css">
+
 </head>
 <body>
   <div class="navbar">
