--- a/login/login.html
+++ b/login/login.html
@@ -5,131 +5,9 @@
   <title>NetLab 로그인</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-      * { box-sizing: border-box; }
-      body {
-        font-family: 'Pretendard', sans-serif;
-        margin: 0;
-        background: #f8fafb;
-      }
-      .navbar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background: #3DAEFA;
-        padding: 0 36px;
-        height: 64px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 1000;
-        box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
-      }
-      .navbar .brand {
-        font-size: 22px;
-        font-weight: 700;
-        color: #fff;
-        text-shadow: 0 1px 2px #36a6ee44;
-        letter-spacing: 0.5px;
-        transition: opacity 0.2s;
-      }
-      .navbar .brand:hover { opacity: 0.85; }
-      .navbar #nav-links a {
-        color: #fff;
-        text-decoration: none;
-        margin-left: 26px;
-        font-size: 16px;
-        font-weight: 500;
-        padding: 8px 14px;
-        border-radius: 7px;
-        transition: background 0.16s;
-        background: transparent;
-      }
-      .navbar #nav-links a:hover {
-        background: #379fde;
-      }
-      .main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background: none;
-      }
-      .login-box {
-        background: #fff;
-        padding: 44px 36px 36px 36px;
-        border-radius: 15px;
-        box-shadow: 0 10px 32px rgba(61, 174, 250, 0.10);
-        width: 100%;
-        max-width: 410px;
-        min-height: 350px;
-        margin-top: 80px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .login-box h2 {
-        margin-bottom: 26px;
-        font-size: 25px;
-        color: #3DAEFA;
-        font-weight: 700;
-      }
-      input {
-        display: block;
-        width: 100%;
-        padding: 13px;
-        margin: 12px 0 0 0;
-        border-radius: 7px;
-        border: 1.5px solid #d2e5f9;
-        font-size: 16px;
-        background: #f9fcff;
-        outline: none;
-        transition: border 0.15s;
-      }
-      input:focus {
-        border: 1.5px solid #3DAEFA;
-        background: #f4faff;
-      }
-      button {
-        margin-top: 28px;
-        padding: 13px 0;
-        width: 100%;
-        background: #3DAEFA;
-        color: #fff;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        font-size: 17px;
-        font-weight: bold;
-        transition: background 0.18s;
-        box-shadow: 0 2px 8px #3daefa18;
-      }
-      button:hover {
-        background: #3499d6;
-      }
-      .signup-link {
-        margin-top: 18px;
-        font-size: 15px;
-        color: #5c5c6b;
-        text-align: center;
-      }
-      .signup-link a {
-        color: #3DAEFA;
-        font-weight: 500;
-        text-decoration: none;
-        margin-left: 5px;
-      }
-      .signup-link a:hover {
-        text-decoration: underline;
-      }
-      @media (max-width: 700px) {
-        .navbar { padding: 0 12px; height: 54px;}
-        .navbar .brand { font-size: 18px;}
-        .login-box { padding: 26px 12px 26px 12px; }
-      }
-  </style>
-</head>
+  <link rel="stylesheet" href="../assets/css/login.css">
+
+  </head>
 <body>
 
   <div class="navbar">
