--- a/problems/list.html
+++ b/problems/list.html
@@ -6,12 +6,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="../assets/css/list.css">
-
+  <style>
+    body { font-family: Pretendard, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
+    .navbar { display:flex; justify-content:space-between; align-items:center; padding:12px 16px; border-bottom:1px solid #eee; }
+    .navbar .brand { font-weight:700; text-decoration:none; color:#111; }
+    #nav-links a { margin-right:12px; text-decoration:none; color:#333; }
+    .user-info { margin-left:8px; color:#666; }
+    .container { max-width:900px; margin:24px auto; padding:0 16px; }
+    #problemList { list-style:none; padding:0; margin:0; }
+    #problemList li { border:1px solid #eee; border-radius:12px; padding:14px; margin-bottom:12px; cursor:pointer; transition:background .15s; }
+    #problemList li:hover { background:#fafafa; }
+    .tags { color:#666; font-size:14px; margin-top:4px; }
+  </style>
 </head>
 <body>
   <div class="navbar">
     <a href="/index.html" class="brand">NetLab</a>
-    <div style="display: flex; align-items: center;">
+    <div style="display:flex; align-items:center;">
       <div id="nav-links"></div>
       <div class="user-info" id="user-info"></div>
     </div>
@@ -24,33 +35,92 @@
 
   <script>
     $(function () {
-      // 문제 목록 불러오기(그대로)
+      // ---- 토큰/유저명 ----
+      const token = localStorage.getItem('token');
+      const refreshToken = localStorage.getItem('refreshToken');
+      const name = localStorage.getItem('name') || '';
+      const $nav = $('#nav-links');
+      const $userInfo = $('#user-info');
+
+      // ---- 네비 렌더 ----
+      function renderNav(loggedIn) {
+        let html = `
+          <a href="/index.html">홈</a>
+          <a href="/problems/list.html">문제목록</a>
+          <a href="/community/community.html">커뮤니티</a>
+        `;
+        if (loggedIn) {
+          html += `<a href="#" id="logoutBtn">로그아웃</a>`;
+          $userInfo.text(name).show();
+        } else {
+          html += `
+            <a href="/login/login.html">로그인</a>
+            <a href="/login/signUp.html">회원가입</a>
+          `;
+          $userInfo.hide();
+        }
+        $nav.html(html);
+      }
+
+      // ---- 토큰 갱신 ----
+      function refreshAndRender() {
+        if (!refreshToken) { renderNav(false); return; }
+        $.ajax({
+          url: 'https://be.netlab.kr/api/auth/refresh',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ refreshToken }),
+          success: function (res) {
+            localStorage.setItem('token', res.accessToken);
+            localStorage.setItem('refreshToken', res.refreshToken);
+            if (res.name) localStorage.setItem('name', res.name);
+            renderNav(true);
+          },
+          error: function () {
+            localStorage.clear();
+            renderNav(false);
+          }
+        });
+      }
+
+      // 최초 네비 상태
+      if (token) renderNav(true); else refreshAndRender();
+
+      // ---- 로그아웃 ----
+      $(document).on('click', '#logoutBtn', function (e) {
+        e.preventDefault();
+        localStorage.clear();
+        alert('로그아웃 되었습니다');
+        location.href = '/index.html';
+      });
+
+      // ---- 문제 목록 불러오기 ----
       $.ajax({
         url: 'https://be.netlab.kr/api/submit/problems',
         method: 'GET',
         success: function(res) {
-          console.log('문제 목록:', res);
           const $list = $('#problemList').empty();
           res.forEach(p => {
+            // XSS 방지: text()로 채움
             const $li = $('<li class="problem-item">').attr('data-id', p.id);
             $li.append($('<div>').append($('<strong>').text(`ID: ${p.id} - ${p.title} (${p.difficulty})`)));
             $li.append($('<div class="tags">').text(`태그: ${p.tags}`));
             $list.append($li);
           });
         },
-        error: function() { alert('문제 목록을 불러오지 못했습니다.'); }
+        error: function() {
+          alert('문제 목록을 불러오지 못했습니다.');
+        }
       });
-  
-      // 클릭 → 확인 → id만 붙여 이동
+
+      // ---- 문제 클릭 → 확인 → 풀이 페이지로 이동 ----
       $(document).on('click', '.problem-item', function () {
         const id = $(this).data('id');
         if (!confirm('문제를 풀러 가시겠습니까?')) return;
+        // 도착 페이지에서 id로 상세 API 호출해 “로딩 중…” 채우기
         location.href = `/views/index.html?id=${encodeURIComponent(id)}`;
       });
     });
   </script>
-  
-
-  
 </body>
 </html>
